refactor: Pawn의 초기 상태를 위한 하위 객체 생성